# pytorch-prune-cnn

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  start_docker.sh  train.py
models/: fcnn.py  resnet10.py  simpleconvnet.py
